--- a/templates/site.html
+++ b/templates/site.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
+    <title>{{title}}</title>
     {% autoescape false %} {{myCode.head}} {% endautoescape %}
     <link
       rel="stylesheet"
@@ -8,7 +9,15 @@
     />
   </head>
   <body>
-    {% autoescape false %} {{myCode.body}} {% endautoescape %}
+    <div id="body">
+      {% autoescape false %} {{myCode.body}} {% endautoescape %}
+    </div>
+    <div id="loader" style="display: none;">
+      <div class="bar">
+        <div class="circle"></div>
+        <p>Loading</p>
+      </div>
+    </div>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
   </body>
 </html>
