Added new home and animation

--- a/templates/loading.html
+++ b/templates/loading.html
@@ -98,7 +98,7 @@
       data = 'https://rural.nic.in' + str.split(window.origin).pop();
       console.log('Url tail:' + data);
       console.log('Refreshing');
-      window.location.href = window.origin + '/getsite';
+      window.location.href = window.location.href;
     </script>
   </body>
 </html>
