--- a/templates/index.html
+++ b/templates/index.html
@@ -1,73 +1,153 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sulabh.in | Welcome</title>
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      href="{{ url_for('static',filename='css/home.css') }}"
     />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class="jumbotron text-center" style="margin-bottom: 0;">
-      <h1>BLINK Page</h1>
-      <p>Page for SIH</p>
-    </div>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <a class="navbar-brand" href="#">Sites</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#collapsibleNavbar"
-      >
-        <span class="navbar-toggler-icon"></span>
+    <nav class="navbar">
+      <a href="#" class="navbar-brand"
+        ><img
+          src="{{ url_for('static',filename='images/sulabh_logo-final.png') }}"
+          alt="Sulabh logo"
+          title="Sulabh_logo"
+          style="width: 20vw; vertical-align: middle;"
+      /></a>
+      <ul>
+        <li><a href="#sect1" title="About">About</a></li>
+        <li><a href="#sect2" title="Contact us">Contact Us</a></li>
+        <li><a href="#sect3" title="Know More">Know More</a></li>
+      </ul>
+      <button class="navbar-toggler">
+        <span></span>
       </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a
-              href="#Scrapper"
-              class="nav-link"
-              onclick="window.location.href=scrap_page"
-              >Scrapper Page</a
-            >
-          </li>
-        </ul>
-      </div>
     </nav>
-    <div class="container" style="margin-top: 30px;">
-      <div class="row">
-        <div class="col-sm-4">
-          <h2>About BLINK</h2>
-          <h5>Photo of us:</h5>
-          <img
-            src="{{url_for('static', filename='blink.jpg')}}"
-            class="rounded"
-            alt="Blink Logo"
-            width="50%"
-            height="auto"
+    <header class="intro">
+      <div class="container">
+        <img
+          src="{{ url_for('static',filename='images/sulabhlogo2.png') }}"
+          alt="Sulabh Logo"
+          id="logo_main"
+        />
+      </div>
+      <button
+        type="button"
+        title="Voice Based Assistance"
+        id="feature1"
+        aria-describedby="Voice Based Assistance"
+      >
+        <!--<a href="#voice_based_assistance"></a>-->
+      </button>
+      <button
+        type="button"
+        class="feature"
+        title="Gesture Based Navigation"
+        id="feature2"
+        aria-describedby="Gesture Based Navigation"
+      >
+        <a href="gesture_based_navigation"></a>
+      </button>
+      <button
+        type="button"
+        class="feature"
+        title="Captions and Hyperlinks"
+        id="feature3"
+        aria-describedby="Captions and Hyperlinks"
+      >
+        <a href="captions_and_hyperlinks"></a>
+      </button>
+      <button
+        type="button"
+        class="feature"
+        title="Text to Refreshable Braille Compatibility"
+        id="feature4"
+        aria-describedby="Text to Refreshable Braille Compatibility"
+      >
+        <a href="text_to_braille"></a>
+      </button>
+      <button
+        type="button"
+        title="Ease of Access and Understanding"
+        id="feature5"
+        aria-describedby="Ease of Access and Understanding"
+      >
+        <a href="ease_of_access"></a>
+      </button>
+      <button
+        type="button"
+        title="Appearance Settings"
+        id="feature6"
+        aria-describedby="Appearance Settings"
+      >
+        <a href="appearance_settings"></a>
+      </button>
+      <div class="container" id="intro" class="reveal">
+        <h2>
+          Introducing <span>Sulabh.in</span>, a website that revolutionises the
+          Internet for the differently abled!
+        </h2>
+        <h3>
+          Select the Features you wish to use, enter the website you wish to
+          visit, and hit Go!
+        </h3>
+        <h3>To understand how to use this portal click on 'Tutorial' below</h3>
+        <button id="tutorial" class="tutorial" type="button" title="Tutorial">
+          Tutorial
+        </button>
+        <br />
+        <br />
+        <form
+          action="https://www.google.com/search"
+          class="searchform"
+          method="get"
+          name="searchform"
+          target="_blank"
+        >
+          <input name="sitesearch" type="hidden" />
+          <input
+            autocomplete="on"
+            class="form-control search"
+            style="height: 5vh; width: 30vw;"
+            name="q"
+            placeholder="Search in example.com"
+            required="required"
+            type="text"
           />
-          <p>We are a group of motivated students</p>
+          <button class="button" type="submit">Search</button>
+        </form>
+        <button><a href="/?name=home">Rural Home</a></button>
+      </div>
+      <div class="feature_list">
+        <div class="container" class="hidden" id="voice_based_assistance">
+          voice based assistance
+        </div>
+        <div class="container" class="hidden" id="gesture_based_navigation">
+          gesture based navigation
+        </div>
+        <div class="container" class="hidden" id="captions_and_hyperlinks">
+          captions and Hyperlinks
+        </div>
+        <div class="container" class="hidden" id="text_to_braille">
+          text to refreshable braille compatibility
+        </div>
+        <div class="container" class="hidden" id="ease_of_access">
+          ease of access and Understanding
+        </div>
+        <div class="container" class="hidden" id="appearance_settings">
+          appearance Settings
         </div>
       </div>
-    </div>
-    <div class="container p-3 my-3 bg-primary text-white">
-      <p id="demo"></p>
+    </header>
+    <!--background image only in Header-->
+    <section id="sect1" class="container"><h2>section 1</h2></section>
+    <section id="sect2" class="container"><h2>section 2</h2></section>
+    <section id="sect3" class="container"><h2>section 3</h2></section>
 
-      <button onclick="document.getElementById('demo').innerHTML = Date()">
-        The time is?
-      </button>
-      <div class="spinner-border"></div>
-    </div>
-    <div class="alert alert-success">
-      <strong>Success!</strong>
-    </div>
-    <script>
-      var scrap_page = window.origin + "/scrapper";
-    </script>
+    <script src="{{url_for('static', filename='js/main.js')}}"></script>
   </body>
 </html>
