--- a/templates/index.html
+++ b/templates/index.html
@@ -35,14 +35,17 @@
           id="logo_main"
         />
       </div>
+
       <button
         type="button"
         title="Voice Based Assistance"
         id="feature1"
+        class="feature"
         aria-describedby="Voice Based Assistance"
-      >
-        <!--<a href="#voice_based_assistance"></a>-->
-      </button>
+        href="#voice_based_assistance"
+      ></button>
+      <button type="button" style="background-color: brown;">Click</button>
+
       <button
         type="button"
         class="feature"
@@ -50,7 +53,7 @@
         id="feature2"
         aria-describedby="Gesture Based Navigation"
       >
-        <a href="gesture_based_navigation"></a>
+        <a href="#gesture_based_navigation"></a>
       </button>
       <button
         type="button"
@@ -59,7 +62,7 @@
         id="feature3"
         aria-describedby="Captions and Hyperlinks"
       >
-        <a href="captions_and_hyperlinks"></a>
+        <a href="#captions_and_hyperlinks"></a>
       </button>
       <button
         type="button"
@@ -123,22 +126,22 @@
         <button><a href="/?name=home">Rural Home</a></button>
       </div>
       <div class="feature_list">
-        <div class="container" class="hidden" id="voice_based_assistance">
+        <div class="container hidden" id="voice_based_assistance">
           voice based assistance
         </div>
-        <div class="container" class="hidden" id="gesture_based_navigation">
+        <div class="container hidden" id="gesture_based_navigation">
           gesture based navigation
         </div>
-        <div class="container" class="hidden" id="captions_and_hyperlinks">
+        <div class="container hidden" id="captions_and_hyperlinks">
           captions and Hyperlinks
         </div>
-        <div class="container" class="hidden" id="text_to_braille">
+        <div class="container hidden" id="text_to_braille">
           text to refreshable braille compatibility
         </div>
-        <div class="container" class="hidden" id="ease_of_access">
+        <div class="container hidden" id="ease_of_access">
           ease of access and Understanding
         </div>
-        <div class="container" class="hidden" id="appearance_settings">
+        <div class="container hidden" id="appearance_settings">
           appearance Settings
         </div>
       </div>
