--- a/templates/site.html
+++ b/templates/site.html
@@ -41,7 +41,7 @@
         </p>
       </div>
     </div>
-    <div id="cursorImage">
+    <div id="cursor">
       <img style=" pointer-events: none; position: absolute; " <canvas style="
       position: fixed; top: 0; left: 0; "
     </div>
@@ -86,9 +86,10 @@
         <span class="modal-close">X</span>
       </div>
     </div>
-
-    <!-- <script src="{{url_for('static', filename='js/face-api.min.js')}}"></script>
-    <script defer src="{{url_for('static', filename='js/dlib.js')}}"></script> -->
+    <script>
+      const MODEL_URL = "{{url_for('static', filename='js/models')}}";
+      const cursorImage = "{{url_for('static', filename='js/cursor.png')}}";
+    </script>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
     <script src="{{url_for('static', filename='js/loader.js')}}"></script>
     <script src="{{url_for('static', filename='js/microsoft.cognitiveservices.speech.sdk.bundle.js')}}"></script>
@@ -99,6 +100,8 @@
     <script src="{{url_for('static', filename='js/image-caption.js')}}"></script>
     <script src="{{url_for('static', filename='js/text2speech.js')}}"></script>
     <script src="https://usefulangle.com/sitejs/prism.js" defer></script>
+    <script src="{{url_for('static', filename='js/face-api.min.js')}}"></script>
+    <script defer src="{{url_for('static', filename='js/dlib.js')}}"></script>
     <script>
       var html = '';
       var TTS_Power = localStorage.getItem('TTS_Power');
