--- a/templates/index.html
+++ b/templates/index.html
@@ -151,6 +151,16 @@
         >
           Tutorial
         </button>
+        <button
+          id="rural-home"
+          tabindex="33"
+          accesskey="r"
+          class="rura-home"
+          type="button"
+          title="Rural Home (shortcut:r)"
+        >
+          <a href="/?name=home">Rural Home</a>
+        </button>
       </div>
       <div class="feature_list">
         <h2 id="intro">
@@ -179,6 +189,13 @@
               value="Voice Commands"
             />
             <label for="Voice Commands"> Voice Commands</label><br />
+            <input
+              type="checkbox"
+              tabindex="8"
+              name="Text Highlighting"
+              value="Text Highlighting"
+            />
+            <label for="Text Highlighting"> Text Highlighting</label><br />
             <input
               type="button"
               class="submitbtn"
